<resources>
    <string name="app_name">Healthy Recipes</string>
    <string name="txtTitle">Bruschetta Recipe</string>
    <string name="description">Recipe Image</string>
    <string name="btnRecipe">View Recipe</string>
    <string name="title_activity_recipe">Recipe</string>
    <string name="txtDirections">Directions</string>
    <string name="txtIngredients">Ingredients</string>
    <string name="txtitem1">4 plum tomatoes</string>
    <string name="txtitem2">6 basil leaves</string>
    <string name="txtitem3">3 garlic cloves, chopped</string>
    <string name="txtitem4">3 TB olive oil</string>
    <string name="txtMix">Combine the ingredients and add salt to the taste. Top French bread slices with mixture</string>
</resources>